--- a/frontend/src/app/components/article-list/article-list.component.css
+++ b/frontend/src/app/components/article-list/article-list.component.css
@@ -2,22 +2,59 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .articles-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
-.sort-buttons button {
+.article-list-container {
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  padding-left: 20px;
+  padding-right: 20px;
+  min-height: 600px;
+}
+
+.articles-action-buttons button {
   margin-left: 10px;
   padding: 8px 16px;
   border-radius: 3px;
   border-width: 1px;
+  text-align: center;
   cursor: pointer;
+}
+
+.articles-action-buttons button.active {
+  background: rgb(220, 220, 220);
+}
+
+button.add-article.active {
+  background: rgb(165, 231, 165) !important;
+  color: white;
+  font-size: 1.01rem;
+}
+
+button.delete-article {
+  background: rgb(236, 145, 110) !important;
+  color: white;
+  font-size: 1.01rem;
+}
+
+.arrow {
+  display: inline-block;
+  width: 1px; /* Ensures space is reserved for the arrow */
+  visibility: hidden; /* Keeps space but hides the arrow */
+  font-weight: bold;
+}
+
+.arrow.visible {
+  visibility: visible; /* Shows the arrow when needed */
 }
 
 .articles-list {
@@ -31,6 +68,7 @@
   border: 1px solid #ccc;
   padding: 15px;
   border-radius: 5px;
+  background-color: hsla(187, 51%, 86%, 0.397);
 }
 
 .article-header {
@@ -77,7 +115,7 @@
 .search-container {
   display: flex;
   align-items: center;
-  border: 1px solid #ccc;
+  border: 1.5px solid black;
   border-radius: 3px;
   background-color: #ffff;
 }
@@ -106,10 +144,12 @@
   margin-right: 5px;
 }
 
-.no-results {
+.no-articles {
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
   color: red;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .modal-overlay {
@@ -138,6 +178,7 @@
 }
 
 mat-paginator {
-  margin-top: 30px;
-  margin-bottom: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: white;
 }
