--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -3,6 +3,7 @@
     align-items: center;
     text-align: center;
     background-color: white;
+    margin-top: 100px;
     padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-size: 1.2rem;
