--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -8,6 +8,7 @@ p {
 
 .content {
     padding: 20px;
+    margin-top: 50px;
     display: block;
     align-items: center;
     justify-content: center;
