--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -11,7 +11,14 @@
   flex: 1;
 }
 
+.logo {
+  font-size: 20px;
+  font-weight: solid;
+  cursor: pointer;
+}
+
 .header-buttons button {
+  width: 80px;
   border-radius: 5px;
   margin-left: 10px;
   background-color: white;
