--- a/frontend/src/app/components/article-form/article-form.component.css
+++ b/frontend/src/app/components/article-form/article-form.component.css
@@ -15,6 +15,8 @@
     padding: 20px;
     width: 812px;
     border-radius: 8px;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .article-form-input {
@@ -35,6 +37,14 @@ textarea {
     display: flex;
     justify-content: flex-end;
     gap: 10px;
+}
+
+.modal-footer button {
+    padding: 5px 10px;
+    border-radius: 3px;
+    border-width: 1px;
+    text-align: center;
+    cursor: pointer;
 }
 
 .error-message-container {
@@ -79,4 +89,12 @@ textarea {
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+
+.confirm-buttons  button {
+    padding: 5px 10px;
+    border-radius: 3px;
+    border-width: 1px;
+    text-align: center;
+    cursor: pointer;
 }
