--- a/frontend/src/app/components/article-list/article-list.component.css
+++ b/frontend/src/app/components/article-list/article-list.component.css
@@ -10,7 +10,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 40px;
 }
 
 .article-list-container {
@@ -22,6 +21,7 @@
 }
 
 .articles-action-buttons button {
+  width: 125px;
   margin-left: 10px;
   padding: 8px 16px;
   border-radius: 3px;
@@ -37,13 +37,12 @@
 button.add-article.active {
   background: rgb(165, 231, 165) !important;
   color: white;
-  font-size: 1.01rem;
+  font-size: 1rem;
 }
 
 button.delete-article {
   background: rgb(236, 145, 110) !important;
   color: white;
-  font-size: 1.01rem;
 }
 
 .arrow {
@@ -96,6 +95,7 @@ button.delete-article {
 }
 
 .article-footer button {
+  width: 80px;
   margin-right: 10px;
   padding: 8px 16px;
   border-radius: 3px;
@@ -103,13 +103,23 @@ button.delete-article {
   cursor: pointer;
 }
 
-.article-futer-buttons {
+.article-footer-buttons {
   display: flex;
 }
 
 .article-date {
   font-size: 15px;
   color: gray;
+}
+
+.search-hint {
+  font-size: 13px;
+  color: gray;
+  height: 20px;
+  display: flex;
+  flex-direction: left;
+  align-items: center;
+  margin-bottom: 40px;
 }
 
 .search-container {
@@ -125,7 +135,7 @@ button.delete-article {
   border: none;
   outline: none;
   padding: 10px;
-  width: 300px;
+  width: 250px;
 }
 
 .clear-btn {
@@ -147,7 +157,7 @@ button.delete-article {
 .no-articles {
   text-align: center;
   font-size: 20px;
-  color: red;
+  color: gray;
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -175,6 +185,14 @@ button.delete-article {
   display: flex;
   justify-content: center;
   gap: 10px;
+}
+
+.modal-buttons button {
+  padding: 5px 10px;
+  border-radius: 3px;
+  border-width: 1px;
+  text-align: center;
+  cursor: pointer;
 }
 
 mat-paginator {
