--- a/frontend/src/app/components/sandbox/sandbox.component.css
+++ b/frontend/src/app/components/sandbox/sandbox.component.css
@@ -14,12 +14,13 @@ h2 {
     margin: 0;
     padding: 30px;
     font-size: 24px;
+    background-color: #f5f5f5;
     color: #333;
 }
 
 .sidebar {
     width: 350px;
-    background-color: #f5f5f5;
+    background-color: white;
     border-right: 1px solid #ccc;
 }
 
@@ -46,5 +47,8 @@ nav a:active {
 }
 
 .content {
-    padding: 20px;
+    padding: 30px;
+    display: block;
+    height: 100%;
+    width: 100%;
 }
