--- a/frontend/src/app/components/sandbox/grid/grid.component.html
+++ b/frontend/src/app/components/sandbox/grid/grid.component.html
@@ -1,5 +1,4 @@
-<ag-grid-angular
-  class="ag-theme-alpine custom-grid"
-  [gridOptions]="gridOptions"
-  style="width: 100%; border-radius: 5px;">
-</ag-grid-angular>
+<div class="custom-grid">
+  <ag-grid-angular [gridOptions]="gridOptions">
+  </ag-grid-angular>
+</div>
