Clock component added

--- a/frontend/src/app/components/sandbox/clock/clock.component.html
+++ b/frontend/src/app/components/sandbox/clock/clock.component.html
@@ -1,1 +1,6 @@
-<p>clock works!</p>
+<div class="clock-container">
+    <div class="digital-clock" data-testid="digital-clock">
+        {{ currentTime }}
+    </div>
+    <button [disabled]="buttonDisabled" (click)="openDialogWithDelay()">Open dialog with delay</button >
+</div>
