--- a/frontend/src/app/components/sandbox/sandbox.component.css
+++ b/frontend/src/app/components/sandbox/sandbox.component.css
@@ -22,6 +22,7 @@ h2 {
     width: 350px;
     background-color: white;
     border-right: 1px solid #ccc;
+    height: 800px;
 }
 
 .sidebar nav a {
@@ -48,7 +49,8 @@ nav a:active {
 
 .content {
     padding: 30px;
-    display: block;
+    display: flex;
+    justify-content: center;
     height: 100%;
     width: 100%;
 }
