--- a/frontend/src/app/components/sandbox/clock/clock-dialog/delay-dialog.component.css
+++ b/frontend/src/app/components/sandbox/clock/clock-dialog/delay-dialog.component.css
@@ -1,8 +1,17 @@
+::ng-deep .cdk-overlay-pane.delayed-dialog-container.mat-mdc-dialog-panel {
+    max-width: 1000px;
+    width: 700px;
+}
+
 ::ng-deep .delayed-dialog-container .mat-mdc-dialog-surface {
     border-radius: 15px;
 }
 
 ::ng-deep .delayed-dialog-container .dialog-content h2 {
-    margin-top: 60px;
+    margin-top: 100px;
+    margin-bottom: 60px;
+}
+
+::ng-deep .delayed-dialog-container .dialog-content h2 {
     text-align: center;
 }
