Dropdowns component added

--- a/frontend/src/app/components/sandbox/sandbox.component.html
+++ b/frontend/src/app/components/sandbox/sandbox.component.html
@@ -4,7 +4,7 @@
         <nav>
             <a routerLink="grid" routerLinkActive="active">Grid</a>
             <a routerLink="calendar" routerLinkActive="active">Calendar</a>
-            <a routerLink="dropdown" routerLinkActive="active">Dropdown</a>
+            <a routerLink="dropdowns" routerLinkActive="active">Dropdowns</a>
             <a routerLink="clock" routerLinkActive="active">Clock</a>
             <a routerLink="drag-drop" routerLinkActive="active">Drag & Drop</a>
         </nav>
