Iframe + shadow dom component added

--- a/frontend/src/app/components/sandbox/sandbox.component.html
+++ b/frontend/src/app/components/sandbox/sandbox.component.html
@@ -7,6 +7,7 @@
             <a routerLink="dropdowns" routerLinkActive="active">Dropdowns</a>
             <a routerLink="clock" routerLinkActive="active">Clock</a>
             <a routerLink="drag-drop" routerLinkActive="active">Drag & Drop</a>
+            <a routerLink="iframe" routerLinkActive="active">Iframe + Shadow DOM elements</a>
         </nav>
     </aside>
 
