Captcha component added

--- a/frontend/src/app/components/sandbox/sandbox.component.html
+++ b/frontend/src/app/components/sandbox/sandbox.component.html
@@ -8,6 +8,7 @@
             <a routerLink="clock" routerLinkActive="active">Clock</a>
             <a routerLink="drag-drop" routerLinkActive="active">Drag & Drop</a>
             <a routerLink="iframe" routerLinkActive="active">Iframe + Shadow DOM elements</a>
+            <a routerLink="captcha" routerLinkActive="active">Captcha</a>
         </nav>
     </aside>
 
