--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,4 +1,21 @@
+.home-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.content {
+    flex: 1;
+}
+
 h2 {
+    margin-top: 40px;
+    text-align: center;
+}
+
+h4 {
+    margin-top: 40px;
     text-align: center;
 }
 
@@ -6,10 +23,57 @@ p {
     text-align: center;
 }
 
-.content {
-    padding: 20px;
+a {
+    text-align: center;
+}
+
+.rules-section {
     margin-top: 50px;
-    display: block;
-    align-items: center;
-    justify-content: center;
+}
+
+.rules-section p {
+    text-align: left;
+}
+
+.modal {
+  position: absolute;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.6);
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  margin-top: 80px;
+  padding: 30px;
+  width: 70%;
+  max-width: 800px;
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+
+.close {
+  float: right;
+  font-size: 24px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.site-rules-link {
+   text-align: center;
+   margin-top: 50px;
+   font-size: 16px; 
+}
+
+.footer {
+    text-align: center;
+    padding: 30px;
+    font-size: 15px;
+    color: #777;
+    border-top: 1px solid #ddd;
 }
