--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,10 @@
+:host {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -43,8 +50,8 @@
 }
 
 .container {
+  flex: 1;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
