--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,9 +1,14 @@
+:host {
+    display: flex;
+    flex-direction: column;
+}
+
 .home-container {
+    flex: 1 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 .content {
     flex: 1;
