--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,41 +1,43 @@
 html {
-    margin: 0px;
-    height: 100%;
-    width: 100%;
- }
- 
- body {
-    background-color: hsla(187, 51%, 86%, 0.397);
-    margin: 0px;
-    min-height: 100%;
-    width: 100%;
- }
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: hsla(187, 51%, 86%, 0.397);
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow-y: auto;
+}
 
 .custom-grid {
-   border-radius: 5px;
-   overflow: hidden;
+  border-radius: 5px;
+  overflow: hidden;
 }
 
 .custom-grid .ag-header {
-   font-family: Roboto, "Helvetica Neue", sans-serif !important;
-   background-color: #f5f5f5;
-   color: black;
+  font-family: Roboto, "Helvetica Neue", sans-serif !important;
+  background-color: #f5f5f5;
+  color: black;
 }
 
 .custom-grid .ag-cell {
-   background-color: white;
+  background-color: white;
 }
 
 .custom-grid .ag-header-cell-resize::after {
-   content: '';
-   position: absolute;
-   height: 28px;
-   top: 10px;
-   bottom: 5px;
-   right: 0;
-   width: 2px;
-   background-color: #ccc;
+  content: "";
+  position: absolute;
+  height: 28px;
+  top: 10px;
+  bottom: 5px;
+  right: 0;
+  width: 2px;
+  background-color: #ccc;
 }
