file actions component is added

--- a/frontend/src/app/components/sandbox/sandbox.component.html
+++ b/frontend/src/app/components/sandbox/sandbox.component.html
@@ -9,6 +9,7 @@
             <a routerLink="drag-drop" routerLinkActive="active">Drag & Drop</a>
             <a routerLink="iframe" routerLinkActive="active">Iframe + Shadow DOM elements</a>
             <a routerLink="captcha" routerLinkActive="active">Captcha</a>
+            <a routerLink="file-actions" routerLinkActive="active">File actions</a>
         </nav>
     </aside>
 
